# VENV-REAPER

./: .gitignore  README.md  VENV_REAPER_AI_PRODUCT_PLAN.md  pyproject.toml  v2.py
src/venv_reaper/: __init__.py  __main__.py  config.py
src/venv_reaper/ai/: __init__.py  import_map.json  import_sweep.py  imports_to_packages.py  installed.py  reconciler.py
src/venv_reaper/cli/: __init__.py  main.py
src/venv_reaper/core/: __init__.py  discovery.py  markers.py  quarantine.py  requirements.py  sizing.py  system_scan.py
src/venv_reaper/index/: __init__.py  db.py  repository.py  schema.sql
src/venv_reaper/theme/: __init__.py  ascii_art.py  matrix_rain.js  reaper_theme.css  rich_theme.py
tests/unit/: test_ai.py  test_cli.py  test_index.py  test_quarantine.py  test_smoke.py  test_system_scan.py
