[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venv-reaper"
version = "0.1.0"
description = "☠ HUNT · INSPECT · DESTROY · REPEAT — AI-augmented system-wide Python virtual environment manager"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Deep Malviya" }]
license = { text = "MIT" }
keywords = ["venv", "virtualenv", "cleanup", "ai", "hacker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "hypothesis>=6.0",
]

[project.scripts]
reaper = "venv_reaper.cli.main:app"

[project.urls]
Homepage = "https://github.com/deepmalviya/venv-reaper"

[tool.hatch.build.targets.wheel]
packages = ["src/venv_reaper"]

[tool.hatch.build.targets.wheel.force-include]
"src/venv_reaper/theme/reaper_theme.css" = "venv_reaper/theme/reaper_theme.css"
"src/venv_reaper/theme/matrix_rain.js" = "venv_reaper/theme/matrix_rain.js"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/venv_reaper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
